# bip-rs

./: .gitignore  .rustfmt.toml  .travis.yml  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  appveyor.yml  extensions.txt
bip/: Cargo.toml  README.md
bip/simple_torrent/: Cargo.toml
bip/simple_torrent/src/: main.rs
bip_bencode/: Cargo.toml
bip_bencode/benches/: mod.rs
bip_bencode/src/: bencode.rs  convert.rs  cow.rs  decode.rs  dictionary.rs  encode.rs  error.rs  lib.rs
bip_bencode/src/access/: bencode.rs  convert.rs  dict.rs  list.rs  mod.rs
bip_bencode/src/inner/: mod.rs  reference.rs
bip_bencode/src/mutable/: bencode_mut.rs  encode.rs  mod.rs
bip_bencode/src/reference/: bencode_ref.rs  decode.rs  decode_opt.rs  dict.rs  list.rs  mod.rs
bip_bencode/test/: mod.rs
bip_dht/: Cargo.toml  README.md
bip_dht/examples/: debug.rs  test.rs
bip_dht/src/: builder.rs  error.rs  lib.rs  router.rs  security.rs  storage.rs  token.rs  transaction.rs
bip_dht/src/message/: announce_peer.rs  compact_info.rs  error.rs  find_node.rs  get_data.rs  get_peers.rs  mod.rs  ping.rs  put_data.rs  request.rs  response.rs
bip_dht/src/routing/: bucket.rs  mod.rs  node.rs  table.rs
bip_dht/src/worker/: bootstrap.rs  handler.rs  lookup.rs  messenger.rs  mod.rs  refresh.rs  workers.rs
bip_dht/src/workers/: manager.rs  messengers.rs  mod.rs  scheduler.rs  workers.rs
bip_disk/: Cargo.toml
bip_disk/benches/: mod.rs
bip_disk/examples/: add_torrent.rs  hello.rs
bip_disk/src/: error.rs  lib.rs  token.rs
bip_disk/src/disk/: builder.rs  manager.rs  mod.rs
bip_disk/src/disk/fs/: memory.rs  mod.rs  native.rs
bip_disk/src/disk/tasks/: context.rs  mod.rs
bip_disk/src/memory/: block.rs  inner.rs  manager.rs  mod.rs
bip_disk/test/: add_torrent.rs  complete_torrent.rs  disk_manager_send_backpressure.rs  load_block.rs  mod.rs  process_block.rs  remove_torrent.rs  resume_torrent.rs
bip_handshake/: Cargo.toml
bip_handshake/examples/: debug.rs  handshake_torrent.rs  hello_world.rs
bip_handshake/src/: bittorrent.rs  channel.rs  discovery.rs  filter.rs  handshaker.rs  infohash_map.rs  lib.rs  local_addr.rs  local_address.rs  peer_protocol.rs  remote_addr.rs  transport.rs  try_accept.rs  try_bind.rs  try_clone.rs  try_connect.rs
bip_handshake/src/bittorrent/: builder.rs  client.rs  codec.rs  connection.rs  framed.rs  handler.rs  handshaker.rs  message.rs  mod.rs  priority.rs  seed.rs  status.rs
bip_handshake/src/bittorrent/handshake/: codec.rs  context.rs  extension_bits.rs  message.rs  mod.rs  parse.rs  protocol.rs
bip_handshake/src/bittorrent/machine/: accept.rs  initiate.rs  mod.rs  status.rs
bip_handshake/src/bittorrent/tcp/: context.rs  handler.rs  handshake.rs  mod.rs  peer.rs
bip_handshake/src/filter/: filters.rs  mod.rs
bip_handshake/src/handshake/: config.rs  handshaker.rs  mod.rs
bip_handshake/src/handshake/handler/: handshaker.rs  initiator.rs  listener.rs  mod.rs  timer.rs
bip_handshake/src/message/: complete.rs  extensions.rs  initiate.rs  mod.rs  protocol.rs
bip_handshake/test/: mod.rs  test_byte_after_handshake.rs  test_bytes_after_handshake.rs  test_connect.rs  test_connect_any_pid.rs  test_custom_protocol.rs  test_drop.rs  test_drop_clone.rs  test_filter_allow_all.rs  test_filter_block_all.rs  test_filter_whitelist_diff_data.rs  test_filter_whitelist_same_data.rs  test_initiate_wrong_hash.rs  test_receive_wrong_hash.rs  test_wrong_pid.rs  test_wrong_protocol.rs
bip_htracker/: Cargo.toml
bip_lpd/: Cargo.toml
bip_magnet/: Cargo.toml
bip_magnet/src/: lib.rs
bip_metainfo/: Cargo.toml
bip_metainfo/benches/: mod.rs
bip_metainfo/examples/: create_torrent.rs  parse_torrent.rs  test.rs
bip_metainfo/src/: accessor.rs  decode.rs  error.rs  iter.rs  lib.rs  metainfo.rs  parse.rs
bip_metainfo/src/builder/: buffer.rs  mod.rs  queue.rs  worker.rs
bip_metainfo/tests/: test_builder.rs
bip_peer/: Cargo.toml
bip_peer/examples/: debug.rs  fs_test.rs  sequential.rs
bip_peer/src/: codec.rs  lib.rs  macros.rs  registration.rs  token.rs  transaction.rs
bip_peer/src/client/: mod.rs
bip_peer/src/disk/: error.rs  fs.rs  mod.rs  worker.rs
bip_peer/src/disk/fs/: mod.rs  native.rs
bip_peer/src/disk/worker/: block_worker.rs  mod.rs
bip_peer/src/manager/: builder.rs  error.rs  mod.rs  peer_info.rs  task.rs
bip_peer/src/manager/future/: mod.rs
bip_peer/src/message/: bencode.rs  bits_extension.rs  extension.rs  mod.rs  null.rs  prot_extension.rs  standard.rs
bip_peer/src/message/bencode/: mod.rs
bip_peer/src/piece/: mod.rs
bip_peer/src/protocol/: context.rs  error.rs  extension.rs  machine.rs  mod.rs  null.rs  unit.rs  wire.rs
bip_peer/src/protocol/tcp/: mod.rs  (+2 more)
bip_peer/src/selector/: mod.rs
bip_peer/test/: mod.rs  peer_manager_backpressure.rs  peer_manager_send_backpressure.rs
bip_select/: Cargo.toml
bip_select/src/: error.rs  lib.rs  uber.rs
bip_select/src/discovery/: dht.rs  error.rs  mod.rs  udp_tracker.rs  ut_metadata.rs
bip_select/src/extended/: mod.rs
bip_select/src/revelation/: error.rs  honest.rs  mod.rs
bip_util/: Cargo.toml  rustfmt.toml
bip_util/src/: bt.rs  contiguous.rs  convert.rs  error.rs  hash.rs  lib.rs  net.rs  sha.rs  test.rs  trans.rs
bip_util/src/send/: mod.rs  split_sender.rs
bip_util/src/sender/: mod.rs  priority_sender.rs
bip_util/src/sha/: builder.rs  mod.rs
bip_util/src/trans/: locally_shuffled.rs  mod.rs  sequential.rs
bip_utp/: Cargo.toml
bip_utracker/: Cargo.toml
bip_utracker/src/: announce.rs  contact.rs  error.rs  lib.rs  option.rs  request.rs  response.rs  scrape.rs  transaction.rs
bip_utracker/src/client/: dispatcher.rs  error.rs  mod.rs  receiver.rs
bip_utracker/src/server/: dispatcher.rs  handler.rs  mod.rs
bip_utracker/test/: mod.rs  test_announce_start.rs  test_announce_stop.rs  test_client_drop.rs  test_client_full.rs  test_connect.rs  test_connect_cache.rs  test_scrape.rs  test_server_drop.rs
examples/get_metadata/: Cargo.toml
examples/get_metadata/src/: main.rs
examples/simple_torrent/: Cargo.toml
examples/simple_torrent/src/: main.rs
(+85 files in other folders)
