[package]
name = "redox"
version = "0.0.2"
description = "A library implementing the bittorrent protocol and a few key extensions."

authors = ["GGist <amiller4421@gmail.com>"]

documentation = "http://ggist.github.io/redox-rs/index.html"
homepage = "https://github.com/GGist/redox-rs"
repository = "https://github.com/GGist/redox-rs"

readme = "README.md"

keywords = ["torrent", "bittorrent", "peer", "tracker"]

license = "Apache-2.0"

[dependencies]
byteorder = "*"
time = "*"
rand = "*"
sha1 = "*"

[features]
unstable = []
