[package]
name          = "bip"
version       = "0.1.0"
description   = "Internal Use: Pulls in all crates for documentation"

authors       = ["Andrew <amiller4421@gmail.com>"]

[dependencies]
bip_bencode   = "*"
bip_dht       = "*"
bip_handshake = "*"
bip_htracker  = "*"
bip_lpd       = "*"
bip_metainfo  = "*"
bip_peer      = "*"
bip_util      = "*"
bip_utracker  = "*"

[features]
unstable = []