[package]
name          = "bip"
version       = "0.1.0"
description   = "DO NOT PUBLISH: Pulls crates for documentation into CI"

authors       = ["Andrew <amiller4421@gmail.com>"]

license       = "MIT/Apache-2.0"

[dependencies]
bip_bencode   = "*"
bip_dht       = "*"
bip_handshake = "*"
bip_htracker  = "*"
bip_lpd       = "*"
bip_metainfo  = "*"
bip_peer      = "*"
bip_util      = "*"
bip_utracker  = "*"

[features]
unstable      = []