[package]
name          = "bip_bencode"
version       = "0.1.4"
description   = "Efficient decoding and encoding for bencode"

authors       = ["Andrew <amiller4421@gmail.com>"]

homepage      = "https://github.com/GGist/bip-rs"
repository    = "https://github.com/GGist/bip-rs/tree/master/bip_bencode"
documentation = "http://ggist.github.io/bip-rs/bip_bencode/index.html"

keywords      = ["bencode", "bittorrent"]

license       = "MIT/Apache-2.0"

[dependencies]
error-chain = "0.7.0"

[features]
unstable      = []