[package]
name             = "bip_bencode"
version          = "0.4.4"
description      = "Efficient decoding and encoding for bencode"

authors          = ["Andrew <amiller4421@gmail.com>"]

homepage         = "https://github.com/GGist/bip-rs"
repository       = "https://github.com/GGist/bip-rs/tree/master/bip_bencode"
documentation    = "https://docs.rs/bip_bencode/"

keywords         = ["bencode", "bittorrent"]

license          = "MIT/Apache-2.0"
edition = "2021"

[dependencies]
error-chain      = "0.12"

[features]
unstable         = []

[[test]]
name             = "test"
path             = "test/mod.rs"