[package]
name = "bip_dht"
version = "0.1.0"
authors = ["Andrew <amiller4421@gmail.com>"]

[dependencies]
crc        = "1.2.0"
log        = "0.3.0"
mio        = "0.5.0"
rand       = "0.3.0"
chrono     = "0.2.0"

[dependencies.bip_bencode]
path = "../bip_bencode"

[dependencies.bip_handshake]
path = "../bip_handshake"

[dependencies.bip_util]
path = "../bip_util"

[profile.test]
debug = true