[package]
name          = "bip_dht"
version       = "0.6.0"
description   = "Implementation of the bittorrent mainline DHT"

authors       = ["Andrew <amiller4421@gmail.com>"]

homepage      = "https://github.com/GGist/bip-rs"
repository    = "https://github.com/GGist/bip-rs/tree/master/bip_dht"
documentation = "https://docs.rs/bip_dht/"

keywords      = ["dht", "distributed", "hash", "mainline", "bittorrent"]

license       = "MIT/Apache-2.0"

[dependencies]
bip_bencode   = { version = "0.2.0" }
bip_handshake = { version = "0.4.0" }
bip_util      = { version = "0.5.0" }
crc           = "1.2.0"
log           = "0.3.0"
mio           = "0.5.0"
rand          = "0.3.0"
chrono        = "0.2.0"
error-chain   = "0.12.1"

[features]
unstable      = []