[package]
name          = "bip_handshake"
version       = "0.5.0"
description   = "Common handshaking interface as well as a default handshake implementation"

authors       = ["Andrew <amiller4421@gmail.com>"]

homepage      = "https://github.com/GGist/bip-rs"
repository    = "https://github.com/GGist/bip-rs/tree/master/bip_handshake"
documentation = "http://ggist.github.io/bip-rs/bip_handshake/index.html"

keywords      = ["handshake", "bittorrent"]

license       = "MIT/Apache-2.0"

[dependencies]
bip_util      = { path = "../bip_util", version = "0.4.0" }
nom           = "1.2.0"
rotor         = "0.6.0"
rotor-stream  = { git = "https://github.com/GGist/rotor-stream.git", branch = "reclaim_stream_socket" }

[features]
unstable      = []

[[test]]
name = "test"
path = "test/mod.rs"