[package]
name          = "bip_handshake"
version       = "0.7.1"
description   = "Common handshaking interface as well as a default handshake implementation"

authors       = ["Andrew <amiller4421@gmail.com>"]

homepage      = "https://github.com/GGist/bip-rs"
repository    = "https://github.com/GGist/bip-rs/tree/master/bip_handshake"
documentation = "https://docs.rs/bip_handshake/"

keywords      = ["handshake", "bittorrent"]

license       = "MIT/Apache-2.0"

[dependencies]
bip_util      = { version = "0.5" }
bytes         = "0.4"
futures       = "0.1"
nom           = "3.1"
rand          = "0.3"
tokio-core    = "0.1"
tokio-io      = "0.1"
tokio-timer   = "0.1"

[features]
unstable      = []

[[test]]
name          = "test"
path          = "test/mod.rs"
