[package]
name        = "bip_htracker"
version     = "0.0.1"
description = "Communication with bittorrent HTTP trackers"

authors     = ["Andrew <amiller4421@gmail.com>"]

homepage    = "https://github.com/GGist/bip-rs/bip_htracker"
repository  = "https://github.com/GGist/bip-rs/bip_htracker"

keywords    = ["tracker", "bittorrent", "http"]

license     = "MIT/Apache-2.0"

[features]
unstable = []