[package]
name        = "bip_magnet"
version     = "0.0.3"
description = "Magnet link parsing and construction"

authors     = ["Astro <astro@spaceboyz.net>"]

homepage    = "https://github.com/GGist/bip-rs/bip_magnet"
repository  = "https://github.com/GGist/bip-rs/bip_magnet"

keywords    = ["magnet", "bittorrent"]

license     = "MIT/Apache-2.0"
edition = "2018"

[features]
unstable = []

[dependencies]
bip_util      = { version = "0.4.0" }
url           = "^0.5.7"
base32        = "^0.3.1"
