[package]
name        = "bip_magnet"
version     = "0.0.3"
description = "Magnet link parsing and construction"

authors     = ["Astro <astro@spaceboyz.net>"]

homepage    = "https://github.com/GGist/bip-rs/bip_magnet"
repository  = "https://github.com/GGist/bip-rs/bip_magnet"

keywords    = ["magnet", "bittorrent"]

license     = "MIT/Apache-2.0"
edition = "2021"

[features]
unstable = []

[dependencies]
bip_util      = { path = "../bip_util" }
url           = "2"
base32        = "0.4"
