[package]
name          = "bip_peer"
version       = "0.4.0"
description   = "Communication with bittorrent peers via peer wire protocol"

authors       = ["Andrew <amiller4421@gmail.com>"]

homepage      = "https://github.com/GGist/bip-rs"
repository    = "https://github.com/GGist/bip-rs/tree/master/bip_peer"
documentation = "https://docs.rs/bip_peer/"

keywords      = ["peer", "wire", "protocol", "pwp", "bittorrent"]

license       = "MIT/Apache-2.0"

[dependencies]
bip_bencode   = "0.4"
bip_handshake = "0.7"
bip_util      = "0.5"
bytes         = "0.4"
byteorder     = "1.0"
crossbeam     = "0.3"
error-chain   = "0.11"
futures       = "0.1"
tokio-core    = "0.1"
tokio-io      = "0.1"
tokio-timer   = "0.1"
nom           = "3.1"

[features]
unstable      = []

[[test]]
name          = "test"
path          = "test/mod.rs"
