[package]
name        = "bip_select"
version     = "0.1.0"
description = "Bittorrent Infrastructure Project Piece Selection Module"

authors     = ["Andrew <amiller4421@gmail.com>"]

homepage    = "https://github.com/GGist/bip-rs/bip_select"
repository  = "https://github.com/GGist/bip-rs/bip_select"

keywords    = ["piece", "selection"]

license     = "MIT/Apache-2.0"

[dependencies]
bip_handshake = "0.7"
bip_peer      = "0.5"
bip_metainfo  = "0.12"
bip_utracker  = "0.4"
bip_util      = "0.5"
bit-set       = "0.4"
bytes         = "0.4"
error-chain   = "0.11"
futures       = "0.1"
rand          = "0.3"
log           = "0.3"

[dev-dependencies]
futures-test  = { git = "https://github.com/carllerche/better-future.git" }
