[package]
name        = "bip_select"
version     = "0.1.0"
description = "Bittorrent Infrastructure Project Piece Selection Module"

authors     = ["Andrew <amiller4421@gmail.com>"]

homepage    = "https://github.com/GGist/bip-rs/bip_select"
repository  = "https://github.com/GGist/bip-rs/bip_select"

keywords    = ["piece", "selection"]

license     = "MIT/Apache-2.0"

[dependencies]
bip_handshake = { path = "../bip_handshake" }
bip_peer      = { path = "../bip_peer" }
bip_metainfo  = { path = "../bip_metainfo" }
bip_utracker  = { path = "../bip_utracker" }
bip_util      = { path = "../bip_util" }
bit-set       = "0.4"
bytes         = "0.4"
error-chain   = "0.12.1"
futures       = "0.1"
rand          = "0.3"
log           = "0.3"

[dev-dependencies]
futures-test  = { git = "https://github.com/carllerche/better-future.git" }
