[package]
name        = "bip_util"
version     = "0.2.1"
description = "Utilities for the Bittorrent Infrastructure Project"

authors     = ["Andrew <amiller4421@gmail.com>"]

homepage    = "https://github.com/GGist/bip-rs/bip_util"
repository  = "https://github.com/GGist/bip-rs/bip_util"

keywords    = ["utility"]

license     = "MIT"

[dependencies]
chrono      = "0.2.0"
rand        = "0.3.0"
rust-crypto = "0.2.0"

[features]
unstable = []