[package]
name          = "bip_util"
version       = "0.3.4"
description   = "Utilities for the Bittorrent Infrastructure Project"

authors       = ["Andrew <amiller4421@gmail.com>"]

homepage      = "https://github.com/GGist/bip-rs"
repository    = "https://github.com/GGist/bip-rs/tree/master/bip_util"
documentation = "http://ggist.github.io/bip-rs/bip_util/index.html"

keywords      = ["utility"]

license       = "MIT/Apache-2.0"

[dependencies]
chrono        = "0.2.0"
rand          = "0.3.0"
rust-crypto   = "0.2.0"

[features]
unstable      = []