[package]
name          = "bip_util"
version       = "0.6.0"
description   = "Utilities for the Bittorrent Infrastructure Project"

authors       = ["Andrew <amiller4421@gmail.com>"]

homepage      = "https://github.com/GGist/bip-rs"
repository    = "https://github.com/GGist/bip-rs/tree/master/bip_util"
documentation = "http://ggist.github.io/bip-rs/bip_util/index.html"

keywords      = ["utility"]

license       = "MIT/Apache-2.0"
edition       = "2021"

[dependencies]
chrono        = "0.4"
num           = "0.4"
rand          = "0.8"
rust-crypto   = "0.2"

[features]
unstable      = []
