[package]
name          = "bip_utracker"
version       = "0.3.2"
description   = "Communication with bittorrent UDP trackers"

authors       = ["Andrew <amiller4421@gmail.com>"]

homepage      = "https://github.com/GGist/bip-rs"
repository    = "https://github.com/GGist/bip-rs/tree/master/bip_utracker"
documentation = "http://ggist.github.io/bip-rs/bip_utracker/index.html"

keywords      = ["tracker", "bittorrent", "udp"]

license       = "MIT/Apache-2.0"

[dependencies]
bip_handshake = { path = "../bip_handshake", version = "0.4.0" }
bip_util      = { path = "../bip_util", version = "0.4.0" }
byteorder     = "0.5.0"
chrono        = "0.2.0"
nom           = "1.2.0"
rand          = "0.3.0"
umio          = "0.3.0"

[features]
unstable      = []

[[test]]
name = "test"
path = "test/mod.rs"