[package]
name          = "bip_utracker"
version       = "0.4.0"
description   = "Communication with bittorrent UDP trackers"

authors       = ["Andrew <amiller4421@gmail.com>"]

homepage      = "https://github.com/GGist/bip-rs"
repository    = "https://github.com/GGist/bip-rs/tree/master/bip_utracker"
documentation = "https://docs.rs/bip_utracker/"

keywords      = ["tracker", "bittorrent", "udp"]

license       = "MIT/Apache-2.0"
edition = "2018"

[dependencies]
bip_handshake = { version = "0.7" }
bip_util      = { version = "0.5" }
byteorder     = "1.1"
chrono        = "0.4"
futures       = "0.1"
nom           = "3.2"
rand          = "0.3"
umio          = "0.3"

[features]
unstable      = []

[[test]]
name = "test"
path = "test/mod.rs"