[package]
name          = "get_metadata"
version       = "0.1.0"
description   = "Examples For bip-rs"

authors       = ["Andrew <amiller4421@gmail.com>"]

license       = "MIT/Apache-2.0"

[dependencies]
bip_dht       = { path = "../../bip_dht" }
bip_handshake = { path = "../../bip_handshake" }
bip_metainfo  = { path = "../../bip_metainfo" }
bip_peer      = { path = "../../bip_peer" }
bip_select    = { path = "../../bip_select" }
clap          = "2.25"
futures       = "0.1"
tokio-core    = "0.1"
tokio-io      = "0.1"
pendulum      = "0.3"
hex           = "0.3"

[features]
unstable      = []