[package]
name          = "simple_torrent"
version       = "0.1.0"
description   = "Examples For bip-rs"

authors       = ["Andrew <amiller4421@gmail.com>"]

license       = "MIT/Apache-2.0"

[dependencies]
bip_disk      = { path = "../../bip_disk" }
bip_handshake = { path = "../../bip_handshake" }
bip_metainfo  = { path = "../../bip_metainfo" }
bip_peer      = { path = "../../bip_peer" }
clap          = "2.25"
futures       = "0.1"
tokio-core    = "0.1"
tokio-io      = "0.1"
tokio-timer   = "0.1"

[features]
unstable      = []